2015-11-18 	Niels Grewe <niels.grewe@halbordnung.de>

	* EcProcess.m: Fix argument validation when reading/writing defaults.

2015-10-28 	Niels Grewe <niels.grewe@halbordnung.de>

	* EcConsole.m: Use readpassphrase() instead of getpass() if available.
	* configure.ac
	* config.make.in:
	Test for readpassphrase in the C library and libbsd, link if needed.
	* configure:
	* config.h.in:
	Regenerate

2015-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* EcTest.h:
	* EcTest.m:
	Add new function to shut down a process via DO connection.

2015-10-14  Richard Frith-Macdonald <rfm@gnu.org>

	* EcUserDefaults.h:
	* EcUserDefaults.m:
	New -revertSettings method to revert all local config settings.
	* EcProcess.h:
	* EcProcess.m:
	Change cmdDefaultDbg to cmdBasicDbg to avoid confusion of the debug
	mode with default settings.
	Add 'defaults revert' command for Console to use.

2015-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h: declare new -launch: method
	* EcCommand.m: implement -launch: method
	* EcTest.m: use -launch: when asked to get a connection to a process.

2015-08-25  Richard Frith-Macdonald <rfm@gnu.org>

	* AlarmTool.m:
	* LogTool.m:
	* Terminate.m:
	Set up well known hosts at start.

2015-07-21  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Be more rigorous about checking instance id values.  Ignore anything
	other than a non-negative integer instance ID.

2015-07-15  Niels Grewe <niels.grewe@halbordnung.de>

	* EcMemoryLogger.h
	* EcProcess.m:
	Add the ability to load a bundle to export memory logs to. Configured
	using the 'MemoryLoggerBundle' default key.

2015-07-13  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Restore lost effect of -ecNotLeaked to moderate changes in our idea
	of when we should generate a warening about potential leaks

2015-07-08  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Allow 'memory current' to list current object allocation values.